--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build application
+      - name: Build application (main and PR)
+        if: github.ref == 'refs/heads/main' || github.event_name == 'pull_request'
         run: npm run build
         env:
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
+
+      - name: Build application (dev)
+        if: github.ref == 'refs/heads/dev' && github.event_name == 'push'
+        run: npm run build
+        env:
+          VITE_API_BASE_URL: https://m7uc5tqqn6.execute-api.ap-southeast-5.amazonaws.com/dev/api
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
